--- a/public/m/less/index.less
+++ b/public/m/less/index.less
@@ -1,100 +1,77 @@
-@import 'base.less';
+@import './base.less';
 
-/* 主页导航条的样式 */
 
-#nav {
-    padding: 0.1rem;
-    ul {
-        display: flex;
-        flex-wrap: wrap;
-        li {
-            width: 1.1833rem;
-            a {
+#it-main{
+    margin: .45rem 0 .45rem 0;
+    background: #fff;
+    >section{
+        padding: 0.1rem;
+    }
+    #nav{
+        padding: 0.1rem;
+        .mui-row{
+            a{
                 display: block;
-                img {
+                img{
                     width: 100%;
+                    vertical-align: middle;
                 }
             }
         }
     }
-}
-
-
-/* 广告区域的样式 */
-
-#banner {
-    display: flex;
-    padding: 0.1rem;
-    .banner-left {
-        /* flex:2; */
-        width: 2.3667rem;
-        height: 2.4rem;
-        a {
-            /* 里面子元素转块 不存在缝隙 */
-            display: flex;
-            /* font-size: 0; 去掉文字大小 去掉间距*/
-            img {
-                width: 50%;
-                height: 1.2rem;
-            }
-        }
-    }
-    .banner-right {
-        /* flex:1; */
-        width: 1.1833rem;
-        height: 2.4rem;
-        a {
-            display: block;
-            img {
-                width: 100%;
-                height: 2.4rem;
-            }
-        }
-    }
-}
-
-
-/* 品牌专区 */
-
-#brand {
-    padding: 0.1rem;
-    .title {
-        a {
-            display: block;
-            img {
-                width: 100%;
-            }
-        }
-    }
-    .content {
-        ul {
-            display: flex;
-            flex-wrap: wrap;
-            li {
-                width: 25%;
-                a {
-                    display: block;
-                    img {
-                        width: 100%;
+    .banner{
+        .mui-row{
+            padding: 0.1rem;
+            .mui-col-xs-8{
+                a{
+                    display: flex;
+                    img{
+                        width: 50%;
+                        height: 1.2rem;
                     }
                 }
             }
-        }
-    }
-}
-
-
-/* 运动生活专区 */
-
-#sport,#women,#man {
-    padding: 0.1rem;
-    .title {
-        a {
-            display: block;
-            img {
-                width: 100%;
+            .right{
+                height: 2.4rem;
+                a{
+                    display: block;
+                    height: 100%;
+                }
+                img{
+                    width: 100%;
+                    height: 100%;
+                }
             }
         }
     }
-    
+    .brand{
+        .mui-row{
+            >div{
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+                
+                p{
+                    align-self: flex-start;
+                }
+                button{
+                    color: #fff;
+                    margin-bottom: 10px ;
+                }
+            }
+            .active{
+                border: 1px solid #666;
+            }
+        }
+    }
+    .column{
+        .mui-row{
+            a{
+                display: block;
+                height: 0.2rem;
+            }
+        }
+    }
 }
+
